--- a/VLaboralWeb/App/EtapasOferta/Partials/etapaOferta.html
+++ b/VLaboralWeb/App/EtapasOferta/Partials/etapaOferta.html
@@ -3,7 +3,15 @@
         <md-content layout="row" layout-align="center center">
             <div flex="70" layout="column" class="ofertas_p" style="margin:2em 0;">
                 <div class="t_ofer_p" layout="column" layout-align="start center">
-                    <h1>{{etapaDetalle.Oferta.Nombre}}</h1>
+                    <h1 class="md-display-3">{{etapaDetalle.Oferta.Nombre}}</h1>
+                    <div class="md-list-item-text" layout="column">
+                        
+                        <h2>Etapa: {{ etapaDetalle.TipoEtapa.Nombre }}</h2>
+                        <h4>Fecha Fin:{{ etapaDetalle.TipoEtapa.FechaFinTentativa }}</h4>
+                        <p>{{ etapaDetalle.TipoEtapa.Descripcion }}</p>
+
+                    </div>
+                    
                 </div>
                 <hr class="h_sop">
                 <div class="puestos">
@@ -33,7 +41,7 @@
                                                    ng-click="opcionBuscar=true">
                                             <md-icon md-svg-src="svg/search.svg"></md-icon>
                                         </md-button>
-                                        
+
                                     </div>
                                 </div>
 
@@ -102,7 +110,7 @@
                                                     <md-icon style="color:forestgreen;" md-svg-src="svg/eye.svg"></md-icon>
                                                 </md-button>
                                             </td>
-                                          
+
                                         </tr>
 
                                     </tbody>
